syntax = "proto3";
package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc SayGoodbye (HelloRequest) returns (GoodbyReply);

}

message HelloRequest {
   string name = 1;
}
message GoodbyReply {
   string message = 1;
   string detail = 2;
}
message GoodbyRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}
